--- a/templatesold/leaderboards/leaderboards.html
+++ b/templatesold/leaderboards/leaderboards.html
@@ -1,4 +1,4 @@
-{% extends "leaderboards/base.html" %}
+{% extends "leaderboards/meta-base.html" %}
 {% load static %}
 
 {% block content %}
@@ -6,7 +6,7 @@
     <div class="login-link">
         {% include 'navbar.html' %}
     </div>
-    <div class="leaderboard-main ">
+    <div class="gradient-background h-full ">
         <h2 class="text-pixel text-glow">Leaderboard</h2>
         <h1 class="text-pixel text-glow">{{ game.name }}</h1>
     </div>
